--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-exam-app",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://seifelhady22.github.io/acrions",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
